# attention-deficit-hyperactivity-driver

./: .gitignore  .mcp.example.json  .typos.toml  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  prompt.txt  pyproject.toml  tasks.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml
agents/: coordinator.md  worker.md
docs/: README.md  architecture.md  schema.md  setup.md
docs/activate/: another-intelligence.md  claude-code.md  cursor.md
docs/reference/: schema.md
rules/: 00-adhd-rules.md
scripts/: detect-perf-level.py  hitl-notify.py
skills/: adhd-main.md  adhd-poster.md  adhd-reader.md
src/adhd/: __init__.py  bus.py  identity.py  mcp_server.py  models.py  notifications.py  rules.py
tests/: test_bus.py  test_capability.py  test_hitl.py  test_identity.py  test_mcp_integration.py  test_notifications.py  test_perf_detect.py
