[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adhd"
version = "0.1.0"
description = "Attention Deficit Hyperactivity Driver — executive function layer for multi-agent AI workflows"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "BrainXio", email = "dev@brainxio.org"},
]
keywords = ["mcp", "agent", "coordination", "multi-agent", "bus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.27.0",
    "pydantic>=2.13.3",
]

[project.scripts]
adhd-mcp = "adhd.mcp_server:main"

[project.urls]
Homepage = "https://github.com/BrainXio/attention-deficit-hyperactivity-driver"
Documentation = "https://github.com/BrainXio/attention-deficit-hyperactivity-driver/tree/main/docs"
Repository = "https://github.com/BrainXio/attention-deficit-hyperactivity-driver"

[tool.hatch.build.targets.wheel]
packages = ["src/adhd"]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24",
    "build>=1.5.0",
    "mdformat>=1.0.0",
    "mdformat-frontmatter>=2.0.10",
    "mdformat-gfm>=1.0.0",
    "yamllint>=1.38.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --tb=short --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.coverage.run]
source = ["src/adhd"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
